# CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
# SET(CMAKE_SYSTEM_VERSION 10.0)

# PROJECT(io_kh2fm)

# SET(CMAKE_CXX_STANDARD 11)
# SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(Python REQUIRED COMPONENTS Interpreter Development)
INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})
MESSAGE("Python_INCLUDE_DIRS = " ${Python_INCLUDE_DIRS})
MESSAGE("Python_LIBRARIES = " ${Python_LIBRARIES})

INCLUDE_DIRECTORIES(./gsutil/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Compile gsutil to add-on directory.
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/gsutil)
SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/gsutil)

SET(CMAKE_SWIG_FLAGS "")
# SET(Py_LIMITED_API)

SET_SOURCE_FILES_PROPERTIES(gsutil/gsutil.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(gsutil/gsutil.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_LIBRARY(gsutil LANGUAGE python SOURCES gsutil/gsutil.i gsutil/gsutil.cpp gsutil/gsreg.cpp)
SWIG_LINK_LIBRARIES(gsutil ${Python_LIBRARIES})
